@@ -76,3 +76,5 @@ plmenu.ko Korean	Byeong-Chan Kim <redhands@linux.sarang.net>
 plemnu.es Spanish	David A. Schekaiban <nb@zaz.net>
 plmenu.bg Bulgarian	Slavei Karadjov <slaff@exco.net>
 plmenu.sk Slovak      	judas@hell <tomka@oalevice.sk>
+plmenu.ja Japanese	Seiichi SATO <sato@cvs-net.co.jp>
+
